Página html feita

--- a/pagina_pessoal/index.html
+++ b/pagina_pessoal/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina pessoal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Kauã Lopes</h1> <!--Título principal-->
+
+    <!--Parágrafo-->
+    <p>Hello world! Eu sou o Kauã, tenho 22 anos moro em Boa Vista e amo a área da tecnologia e meus hobbies são jogar e assistir filmes e series.</p>
+
+    <ul> <!--Lista não ordenada-->
+        <li>Jogar</li>
+        <img src="imagens/jogar.jpg" height="100">
+        <li>Assistir filmes e series</li>
+        <img src="imagens/assistir.jpg" height="100">
+        <li>Programar</li>
+        <img src="imagens/programar.jpg" height="100">
+    </ul>
+    <table border="1"> <!--Tabela contendo 3 linas x 2 colunas-->
+        <tr>
+            <th>País</th>
+            <th>Imagem</th>
+        </tr>
+        <tr>
+            <td>Japão</td>
+            <td><img src="imagens/japao.jpg" height="150"></td>
+        </tr>
+        <tr>
+            <td>Holanda</td>
+            <td><img src="imagens/holanda.jpg" height="150"></td>
+        </tr>
+        <tr>
+            <td>Bélgica</td>
+            <td><img src="imagens/belgica.jpg" height="150"></td>
+        </tr>
+    </table>
+    <br>
+    <a href="https://www.emugames.net/roms/" target="_blank">Me clique, ira ver algo muito bom</a>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
