--- a/pagina_pessoal/index.html
+++ b/pagina_pessoal/index.html
@@ -10,35 +10,38 @@
     <h1>Kauã Lopes</h1> <!--Título principal-->
 
     <!--Parágrafo-->
-    <p>Hello world! Eu sou o Kauã, tenho 22 anos moro em Boa Vista e amo a área da tecnologia e meus hobbies são jogar e assistir filmes e series.</p>
+    <p>Hello, world! 🌍 Meu nome é Kauã, tenho 22 anos e moro na ensolarada Boa Vista, Roraima. Sou apaixonado pela área da tecnologia 💻, sempre buscando aprender mais sobre programação, inovação e as últimas tendências do mundo digital.
+
+Quando não estou imerso em códigos ou estudando algo novo, você me encontra jogando 🎮 ou maratonando filmes e séries 🎬—adoro desde clássicos até as produções mais recentes. Sou um grande fã de ficção científica, aventura e, é claro, um bom drama com plot twists surpreendentes!</p>
 
     <ul> <!--Lista não ordenada-->
         <li>Jogar</li>
-        <img src="imagens/jogar.jpg" height="100">
+        <img src="imagens/jogar.jpg">
         <li>Assistir filmes e series</li>
-        <img src="imagens/assistir.jpg" height="100">
+        <img src="imagens/assistir.jpg">
         <li>Programar</li>
-        <img src="imagens/programar.jpg" height="100">
+        <img src="imagens/programar.jpg">
     </ul>
     <table border="1"> <!--Tabela contendo 3 linas x 2 colunas-->
-        <tr>
-            <th>País</th>
-            <th>Imagem</th>
+        <tr> <!--Linha da tabela-->
+            <th>País</th> <!--Cabeçalho da tabela-->
+            <th>Imagem</th> <!--Cabeçalho da tabela-->
         </tr>
-        <tr>
-            <td>Japão</td>
+        <tr> <!--Linha da tabela-->
+            <td>Japão</td> <!--Dados da Tabela-->
             <td><img src="imagens/japao.jpg" height="150"></td>
         </tr>
-        <tr>
+        <tr> <!--Linha da tabela-->
             <td>Holanda</td>
             <td><img src="imagens/holanda.jpg" height="150"></td>
         </tr>
-        <tr>
+        <tr> <!--Linha da tabela-->
             <td>Bélgica</td>
             <td><img src="imagens/belgica.jpg" height="150"></td>
         </tr>
     </table>
     <br>
+    <!--Link interativo-->
     <a href="https://www.emugames.net/roms/" target="_blank">Me clique, ira ver algo muito bom</a>
 
 
