--- a/pagina_pessoal/index.html
+++ b/pagina_pessoal/index.html
@@ -14,6 +14,10 @@
 
 Quando não estou imerso em códigos ou estudando algo novo, você me encontra jogando 🎮 ou maratonando filmes e séries 🎬—adoro desde clássicos até as produções mais recentes. Sou um grande fã de ficção científica, aventura e, é claro, um bom drama com plot twists surpreendentes!</p>
 
+    <button id="meubotao">Clique para ver uma mensagem!</button>
+
+    <div id="mensagem"></div>
+
     <ul> <!--Lista não ordenada-->
         <li>Jogar</li>
         <img src="imagens/jogar.jpg">
