--- a/pagina_pessoal/index.html
+++ b/pagina_pessoal/index.html
@@ -10,9 +10,12 @@
     <h1>Kauã Lopes</h1> <!--Título principal-->
 
     <!--Parágrafo-->
-    <p>Hello, world! 🌍 Meu nome é Kauã, tenho 22 anos e moro na ensolarada Boa Vista, Roraima. Sou apaixonado pela área da tecnologia 💻, sempre buscando aprender mais sobre programação, inovação e as últimas tendências do mundo digital.
+    <p>Hello, world! 🌍 Meu nome é Kauã, tenho 22 anos e moro na ensolarada Boa Vista, Roraima. Sou apaixonado pela área da tecnologia 💻, 
+    sempre buscando aprender mais sobre programação, inovação e as últimas tendências do mundo digital.
 
-Quando não estou imerso em códigos ou estudando algo novo, você me encontra jogando 🎮 ou maratonando filmes e séries 🎬—adoro desde clássicos até as produções mais recentes. Sou um grande fã de ficção científica, aventura e, é claro, um bom drama com plot twists surpreendentes!</p>
+    Quando não estou imerso em códigos ou estudando algo novo, você me encontra jogando 🎮 ou maratonando filmes e séries 🎬—adoro desde 
+    clássicos até as produções mais recentes. Sou um grande fã de ficção científica, aventura e, é claro, um bom drama com plot twists 
+    surpreendentes!</p>
 
     <button id="meubotao">Clique para ver uma mensagem!</button>
 
